<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="intern.com.prant.intent.kabarSehatActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundapp"
    tools:showIn="@layout/activity_kabarsehat">

    <TextView
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosite1"
        android:id="@+id/textKabar1"
        android:typeface="sans"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="90dp"
     />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosite2"
        android:id="@+id/textKabar2"
        android:typeface="sans"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textKabar1"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosite3"
        android:id="@+id/textKabar3"
        android:typeface="sans"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textKabar2"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosite4"
        android:id="@+id/textKabar4"
        android:typeface="sans"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textKabar3"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosite5"
        android:id="@+id/textKabar5"
        android:typeface="sans"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textKabar4"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosite6"
        android:id="@+id/textKabar6"
        android:typeface="sans"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textKabar5"
        />

    <TextView
    android:layout_marginTop="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/linktosite7"
    android:id="@+id/textKabar7"
    android:typeface="sans"
    android:textColor="@color/colorPrimary"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:layout_below="@+id/textKabar6"
    />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosite8"
        android:id="@+id/textKabar8"
        android:typeface="sans"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textKabar7"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosite9"
        android:id="@+id/textKabar9"
        android:typeface="sans"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textKabar8"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosite10"
        android:id="@+id/textKabar10"
        android:typeface="sans"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textKabar9"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosite11"
        android:id="@+id/textKabar11"
        android:typeface="sans"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textKabar10"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosite12"
        android:id="@+id/textKabar12"
        android:typeface="sans"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textKabar11"
        />




</RelativeLayout>